chore(Docker-compose): Manutenção e adicionando arquivos relacionais
